test/types/enum/indexEnumType.good
indexEnumType.chpl:2: error: illegal type index expression 'testEnum[0]'
indexEnumType.chpl:2: note: enum type 'testEnum' cannot be indexed in this manner
