test/types/enum/indexEnumType.chpl
enum testEnum {a, b, c};
testEnum[0];
